--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -1,4 +1,5 @@
 {
+  "ApiVersion": "v0.1",
   "ConnectionStrings": {
     "ApiConnection": "Server=localhost\\SQLEXPRESS;Database=PassAuthKeeper_Database;Trusted_Connection=True;TrustServerCertificate=True;"
   },
