feat: versionamento atualizado, migrations iniciais do identity geradas, inclusao da config do jwt

--- a/Backend/BE-Authentication/Api/appsettings.json
+++ b/Backend/BE-Authentication/Api/appsettings.json
@@ -1,13 +1,19 @@
 {
-  "ApiVersion":  "v0.1",
+  "ApiVersion": "v0.1",
   "ConnectionStrings": {
-    "ApiConnection": "Server=localhost;Database=PassAuthKeeper_Database;Trusted_Connection=True;TrustServerCertificate=True;"
+    "connectionString": "Server=localhost;Database=PassAuthKeeper_Database;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "JwtBearerTokenSettings": {
+    "Issuer": "https://localhost:20001;http://localhost:20002",
+    "Audience": "Authentication.Api",
+    "ExpiresAt": 5,
+    "SecretKey": "@my-secret-key"
   },
   "AllowedHosts": "*"
 }
