feat: indentity's tables name change

--- a/Backend/BE-Authentication/Api/appsettings.json
+++ b/Backend/BE-Authentication/Api/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ApiVersion": "v0.1",
   "ConnectionStrings": {
-    "connectionString": "Server=localhost;Database=PassAuthKeeper_Database;Trusted_Connection=True;TrustServerCertificate=True;"
+    "connectionString": "Server=localhost;Database=ADS-NoBreak;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
