feat: frontend docker config, auth controller creation, user register and login models creation

--- a/Backend/BE-Authentication/Api/appsettings.json
+++ b/Backend/BE-Authentication/Api/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ApiVersion": "v0.1",
+  "ApiVersion": "0.1",
   "ConnectionStrings": {
     "connectionString": "Server=localhost;Database=ADS-NoBreak;Trusted_Connection=True;TrustServerCertificate=True;"
   },
