--- a/Backend/BE-Authentication/Services/Services.csproj
+++ b/Backend/BE-Authentication/Services/Services.csproj
@@ -36,7 +36,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
 </Project>
