--- a/Backend/BE-Authentication/Api/appsettings.json
+++ b/Backend/BE-Authentication/Api/appsettings.json
@@ -13,7 +13,7 @@
     "Issuer": "https://localhost:20001;http://localhost:20002",
     "Audience": "Authentication.Api",
     "ExpiresAt": 5,
-    "SecretKey": "@my-secret-key"
+    "SecretKey": "@my-super-secret-key"
   },
   "AllowedHosts": "*"
 }
