--- a/Backend/BE-Authentication/Api/appsettings.Development.json
+++ b/Backend/BE-Authentication/Api/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
-  "ApiVersion": "0.1",
+  "ApiVersion": "0.11",
   "ConnectionStrings": {
     "connectionString": "Server=localhost\\SQLEXPRESS;Database=ADS-NoBreak;Trusted_Connection=True;TrustServerCertificate=True;"
   },
@@ -7,12 +7,36 @@
     "Issuer": "https://localhost:20001;http://localhost:20002",
     "Audience": "Authentication.Api",
     "ExpiresAt": 5,
-    "SecretKey":  "@my-secret-key"
+    "SecretKey": "@my-secret-key"
   },
-  "Logging": {
-    "LogLevel": {
+  "LoggingEnabled": false,
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.MSSQLServer"
+    ],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Override": {
+        "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
+        "Microsoft": "Error",
+        "System": "Error",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "Server=localhost\\SQLEXPRESS;Database=ADS-NoBreak;Trusted_Connection=True;TrustServerCertificate=True;",
+          "tableName": "Logs",
+          "autoCreateSqlTable": true
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithThreadId", "WithProperty", "WithMachineName" ],
+    "Properties": {
+      "Application": "Login.Api",
+      "TransactionId": "{CorrelationId}"
     }
   },
   "AllowedHosts": "*"
