--- a/Backend/BE-Authentication/Api/appsettings.json
+++ b/Backend/BE-Authentication/Api/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ApiVersion": "0.1",
+  "ApiVersion": "0.11",
   "ConnectionStrings": {
     "connectionString": "Server=localhost;Database=ADS-NoBreak;Trusted_Connection=True;TrustServerCertificate=True;"
   },
@@ -14,6 +14,36 @@
     "Audience": "Authentication.Api",
     "ExpiresAt": 5,
     "SecretKey": "@my-super-secret-key"
+  },
+  "LoggingEnabled": false,
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.MSSQLServer"
+    ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
+        "Microsoft": "Error",
+        "System": "Error",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "Server=localhost;Database=ADS-NoBreak;Trusted_Connection=True;TrustServerCertificate=True;",
+          "tableName": "Logs",
+          "autoCreateSqlTable": true
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithThreadId", "WithProperty", "WithMachineName" ],
+    "Properties": {
+      "Application": "Login.Api",
+      "TransactionId": "{CorrelationId}"
+    }
   },
   "AllowedHosts": "*"
 }
